Import of NATG/Hash-AutoHash-Args-1.01 from CPAN.
gitpan-cpan-distribution: Hash-AutoHash-Args
gitpan-cpan-version:      1.01
gitpan-cpan-path:         NATG/Hash-AutoHash-Args-1.01.tar.gz
gitpan-cpan-author:       NATG
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Hash-AutoHash-Args
-version: 1.00
+version: 1.01
 author:
   - 'Nat Goodman <natg@shore.net>'
 abstract: Argument list processing
@@ -11,19 +11,17 @@ build_requires:
   Exporter: 0
   Test::Deep: 0
   Test::More: 0.88
-  Tie::Hash::MultiValue: 0
 requires:
   Carp: 0
-  List::MoreUtils: 0.09
+  Hash::AutoHash: 1
   Scalar::Util: 1.01
   Tie::Hash: 1
-  Tie::ToObject: 0
 configure_requires:
   Module::Build: 0.34
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.00
+    version: 1.01
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 1.00
