--- a/META.yml
+++ b/META.yml
@@ -1,38 +1,41 @@
 ---
-name: Hash-AutoHash-Args
-version: 1.12
+abstract: 'Object-oriented processing of keyword-based argument lists'
 author:
   - 'Nat Goodman <natg@shore.net>'
-abstract: Object-oriented processing of keyword-based argument lists
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
 build_requires:
   Exporter: 0
   Test::Deep: 0
   Test::More: 0.88
+configure_requires:
+  Module::Build: 0.4
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.112150'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Hash-AutoHash-Args
+provides:
+  Hash::AutoHash::Args:
+    file: lib/Hash/AutoHash/Args.pm
+    version: 1.13
+  Hash::AutoHash::Args::V0:
+    file: lib/Hash/AutoHash/Args/V0.pm
+    version: 0
+  Hash::AutoHash::Args::V0::helper:
+    file: lib/Hash/AutoHash/Args/V0.pm
+    version: 0
+  Hash::AutoHash::Args::helper:
+    file: lib/Hash/AutoHash/Args.pm
+    version: 0
+  Hash::AutoHash::Args::tie:
+    file: lib/Hash/AutoHash/Args.pm
+    version: 0
 requires:
   Carp: 0
   Hash::AutoHash: 1.1
   Scalar::Util: 1.01
   Tie::Hash: 1
-configure_requires:
-  Module::Build: 0.34
-provides:
-  Hash::AutoHash::Args:
-    file: lib/Hash/AutoHash/Args.pm
-    version: 1.12
-  Hash::AutoHash::Args::V0:
-    file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.11
-  Hash::AutoHash::Args::V0::helper:
-    file: lib/Hash/AutoHash/Args/V0.pm
-  Hash::AutoHash::Args::helper:
-    file: lib/Hash/AutoHash/Args.pm
-  Hash::AutoHash::Args::tie:
-    file: lib/Hash/AutoHash/Args.pm
-    version: 1.12
-generated_by: Module::Build version 0.34
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.13
