Import of NATG/Hash-AutoHash-Args-1.16_01 from CPAN.
gitpan-cpan-distribution: Hash-AutoHash-Args
gitpan-cpan-version:      1.16_01
gitpan-cpan-path:         NATG/Hash-AutoHash-Args-1.16_01.tar.gz
gitpan-cpan-author:       NATG
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   Exporter: 0
   Test::Deep: 0
   Test::More: 0.88
+  perl: v5.17.6
 configure_requires:
   Module::Build: 0.4
 dynamic_config: 1
@@ -18,10 +19,10 @@ name: Hash-AutoHash-Args
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.15
+    version: 1.16_01
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.15
+    version: 1.16_01
   Hash::AutoHash::Args::V0::helper:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 0
@@ -38,4 +39,4 @@ requires:
   Tie::Hash: 1
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.15
+version: 1.16_01
