--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,6 @@ build_requires:
   Exporter: 0
   Test::Deep: 0
   Test::More: 0.88
-  perl: v5.17.6
 configure_requires:
   Module::Build: 0.4
 dynamic_config: 1
@@ -19,10 +18,10 @@ name: Hash-AutoHash-Args
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.16_01
+    version: 1.16
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.16_01
+    version: 1.16
   Hash::AutoHash::Args::V0::helper:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 0
@@ -34,9 +33,9 @@ provides:
     version: 0
 requires:
   Carp: 0
-  Hash::AutoHash: 1.15
+  Hash::AutoHash: 1.16
   Scalar::Util: 1.01
   Tie::Hash: 1
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.16_01
+version: 1.16
