--- a/META.yml
+++ b/META.yml
@@ -18,10 +18,10 @@ name: Hash-AutoHash-Args
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.16
+    version: 1.17_01
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.16
+    version: 1.17_01
   Hash::AutoHash::Args::V0::helper:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 0
@@ -38,4 +38,4 @@ requires:
   Tie::Hash: 1
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.16
+version: 1.17_01
