--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,21 @@ abstract: 'Object-oriented processing of keyword-based argument lists'
 author:
   - 'Nat Goodman <natg@shore.net>'
 build_requires:
-  Exporter: 0
-  Test::Deep: 0
-  Test::More: 0.88
+  Carp: 1.2
+  Exporter: 5.68
+  File::Basename: 2.82
+  File::Spec: 3.4
+  Hash::AutoHash: 1.16
+  List::MoreUtils: 0.33
+  Module::Build: 0.4007
+  Test::Deep: 0.11
+  Test::More: 0.98
+  Test::Pod: 1.48
+  Test::Pod::Content: v0.0.6
 configure_requires:
-  Module::Build: 0.4
+  Module::Build: 0.4007
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.120351'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,10 +26,10 @@ name: Hash-AutoHash-Args
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.17
+    version: 1.18_01
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.17
+    version: 1.18_01
   Hash::AutoHash::Args::V0::helper:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 0
@@ -32,10 +40,15 @@ provides:
     file: lib/Hash/AutoHash/Args.pm
     version: 0
 requires:
-  Carp: 0
+  Carp: 1.2
+  Cwd: 3.4
+  Exporter: 5.68
   Hash::AutoHash: 1.16
-  Scalar::Util: 1.01
-  Tie::Hash: 1
+  List::MoreUtils: 0.33
+  List::Util: 1.32
+  Tie::Hash: 1.04
+  Tie::ToObject: 0.03
+  XSLoader: 0.16
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.17
+version: 1.18_01
