--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   Exporter: 5.68
   File::Basename: 2.82
   File::Spec: 3.4
-  Hash::AutoHash: 1.16
+  Hash::AutoHash: 1.17
   List::MoreUtils: 0.33
   Module::Build: 0.4007
   Test::Deep: 0.11
@@ -26,10 +26,10 @@ name: Hash-AutoHash-Args
 provides:
   Hash::AutoHash::Args:
     file: lib/Hash/AutoHash/Args.pm
-    version: 1.18_01
+    version: 1.18
   Hash::AutoHash::Args::V0:
     file: lib/Hash/AutoHash/Args/V0.pm
-    version: 1.18_01
+    version: 1.18
   Hash::AutoHash::Args::V0::helper:
     file: lib/Hash/AutoHash/Args/V0.pm
     version: 0
@@ -43,7 +43,7 @@ requires:
   Carp: 1.2
   Cwd: 3.4
   Exporter: 5.68
-  Hash::AutoHash: 1.16
+  Hash::AutoHash: 1.17
   List::MoreUtils: 0.33
   List::Util: 1.32
   Tie::Hash: 1.04
@@ -51,4 +51,4 @@ requires:
   XSLoader: 0.16
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.18_01
+version: 1.18
